syntax = "proto3";

option go_package = "genproto/auth";

package auth;

service DashboardService {
    rpc GetDailyPersonalAccessCount(AccessCountReq) returns (AccessCountRes);
    rpc GetDailyPersonalBookingRevenueByDay(BookingRevenueReq) returns (BookingRevenueRes);
    rpc GetDailyAccessCountBySubscriptionID(SubscriptionCountReq) returns (SubscriptionCountRes);
    rpc GetDailyBookingRevenueBySubscriptionID(BookingRevenueBySubscriptionReq) returns (BookingRevenueBySubscriptionRes);
}

message AccessCountReq {
    string gymId = 1;
    string startDate = 2;
    string endDate = 3;
}

message AccessCount {
    string accessDate = 1;
    int32 accessCount = 2;
}

message AccessCountRes {
    repeated AccessCount accessCountList = 1;
}

message BookingRevenueReq {
    string gymId = 1;
    string startDate = 2;
    string endDate = 3;
}

message BookingRevenue{
    string bookingDate = 1;
    float averageRevenue = 2;
}

message BookingRevenueRes {
    repeated BookingRevenue bookingRevenueList = 1;
}

message SubscriptionCountReq {
    string subscriptionID = 1;
    string startDate = 2;
    string endDate = 3;
}

message SubscriptionCount{
    string accessDate = 1;
    int32 accessCount = 2;
}

message SubscriptionCountRes {
    repeated SubscriptionCount subscriptionCountList = 1;
}

message BookingRevenueBySubscriptionReq {
    string subscriptionID = 1;
    string startDate = 2;
    string endDate = 3;
}

message BookingRevenueBySubscription{
    string bookingDate = 1;
    float averageRevenue = 2;
}

message BookingRevenueBySubscriptionRes {
    repeated BookingRevenueBySubscription bookingRevenueBySubscriptionList = 1;
}